# budgie-pi-temp-monitor

./: README.md  budgie_pi_temp_monitor.py  install.sh  meson.build
schema/: com.github.samlane-ma.budgie-pi-temp-monitor.gschema.xml
src/: BudgiePiTempMonitor.plugin  budgie_pi_temp_monitor.py  meson.build
